force-app/main/default/objects/JBCXM__SPSharingAssociation__c/JBCXM__SPSharingAssociation__c.object-meta.xml
<CustomObject>
    <description>Object to store the association of Success Plan/Objective to SP Sharing Layout Types</description>
    <label>SPSharingAssociation</label>
    <nameField>
        <label>SPSharingAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPSharingAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>