force-app/main/default/objects/JBCXM__SPSharingAssociation__c/fields/JBCXM__LayoutType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LayoutType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sharing Layout Type</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipName>SPSharingAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>