force-app/main/default/objects/JBCXM__SPSharingAssociation__c/fields/JBCXM__SuccessPlan__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SuccessPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Plan</label>
    <referenceTo>JBCXM__CTAGroup__c</referenceTo>
    <relationshipName>SPSharingAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>